<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ITEM_VERSION">Hello World, CIT!</string>
    <string name="app_name">CIT</string>
    <string name="Mono_test">CIT mono mode</string>
    <string name="Machine_auto_test">Machine auto test</string>
    <string name="PCBA_auto_test">PCBA auto test</string>
    <string name="fastmmi_test">FASTMMI test</string>
    <string name="versionname">Version</string>
    <string name="touchname">TouchTest</string>
    <string name="motionsensorname">sensor test</string>
    <string name="fmtestname">FMtest</string>
    <string name="keytestname">KeyTest</string>
    <string name="proximitysenortest">Proximity sensor test</string>
    <string name="test_item_keyled">KeyLed</string>
    <string name="test_item_flashlight">Flashlight</string>
    <string name="test_item_power">Power</string>
    <string name="test_item_simoruim">SIM or UIM</string>
    <string name="test_item_camera">Camera</string>
    <string name="test_item_charge">Charge</string>
    <string name="test_item_back_charge">Back Charge</string>
    <string name="test_item_speak">Speak and SDCard</string>
    <string name="test_item_notifyled">NotifyLed</string>
    <string name="test_item_reciveloopback">Reciver loopback</string>
    <string name="test_item_heakloopback">Head loopback</string>
    <string name="lightsenortest">Light Sensor</string>
    <string name="calibrationtest">Calibration</string>
    <string name="Magnetictest">Magnetic Sensor</string>
    <string name="key_init_xml_failed">There is no config file or parse xml failed</string>
    <string name="keytest_menu_delete">Quit</string>
    <string name="storagetest">StorageTest</string>
    <string name="gpstest">GPSTest</string>
    <string name="fm_init">Init</string>
    <string name="fm_get_FREQ">Get FREQ</string>
    <string name="fm_change_VOL">Change VOL</string>
    <string name="fm_stereo_mono">Stereo</string>
    <string name="fm_mute">MUTE</string>
    <string name="fm_rssi">Rssi</string>
    <string name="fm_seek">Seek</string>
    <string name="fm_close">Close</string>
    <string name="fm_setfreqtext">Set Freq</string>
    <string name="fm_freqinputtext">Freq Input</string>
    <string name="fm_statetext">State:</string>
    <string name="fm_initmessage">Init OK ,the freq is:</string>
    <string name="fm_Curfreq">Cur freq is:</string>
    <string name="fm_CurVolume">Cur volume is:</string>
    <string name="fm_mono">mono now</string>
    <string name="fm_stereo">Stereo now</string>
    <string name="fm_getnewfreq">Get new freq:</string>
    <string name="fm_nofreq">No new freq</string>
    <string name="fm_closed">Radio Closed</string>
    <string name="fm_freqnow">Freq now is:</string>
    <string name="g_null_text" />
    <string name="fm_khz">khz</string>
    <string name="lcdmenuquit">quit</string>
    <string name="Clear">Clear</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="test_item_vibration">Vibration</string>
    <string name="vibration_message">The Vibration is testing,please click the OK to stop vibration</string>
    <string name="led_red_message">The Red LED is testing,please click the OK to test the Green LED.</string>
    <string name="led_green_message">The Grren LED is testing,please click the OK to test the Blue LED</string>
    <string name="led_test_close">The LED test is finish,pleash click the OK to stop test</string>
    <string name="storage_message_start">Please insert T card ,hot-plugging will be tested!</string>
    <string name="loadkeybadconfigerror">Load the keybad config file failed</string>
    <string name="storage_message_0">Can not find the storage card</string>
    <string name="storage_message_1">Create or write file failed</string>
    <string name="storage_message_2">Read file failed</string>
    <string name="storage_message_3">Storage card test success</string>
    <string name="storage_message_4">Compared file not equal</string>
    <string name="test_sim_status_0">SIM card state: Unknown</string>
    <string name="test_sim_status_1">UIM card state: no UIM card</string>
    <string name="test_sim_status_1_1">SIM card state: no SIM card</string>
    <string name="test_sim_status_2"> card state: Locked: requires the users PIN to unlock</string>
    <string name="test_sim_status_3"> card state: Locked: requires the users PUK to unlock</string>
    <string name="test_sim_status_4"> card state: Locked: requries a network PIN to unlock</string>
    <string name="test_sim_status_5"> card state: Ready</string>
    <string name="battery_info_status_charging_ac">Battery status:Charging(AC)</string>
    <string name="battery_info_status_charging_usb">Battery status:Charging(USB)</string>
    <string name="battery_info_status_discharging">Battery status:Disconnected</string>
    <string name="battery_info_status_notcharging">Battery status:Not charging.\nPlz plug charging cable!</string>
    <string name="battery_info_status_full">Battery status:Full</string>
    <string name="battery_info_status_unknow">Battery status:Unknow</string>
    <string name="power_message">Please press Power to sleep phone and then press again to wake up!</string>
    <string name="speak_test_message">The speak and SDCard are testing...</string>
    <string name="speak_test_hasnot_sdcard">No SDCard!\nplaying local music...</string>
    <string name="speak_test_hasnot_sdcard_file">Sdcard test fail!\nplaying local music...</string>
    <string name="keyled_test_message">The KeyLed is testing ,press OK to stop test</string>
    <string name="flashlight_test_message">The Flashlight is testing,press OK to stop test</string>
    <string name="reciveloopback_test_message">The Reciverloopback is testing...</string>
    <string name="headloopback_test_message">The Headloopback is testing...</string>
    <string name="gps_st_info_snr">snr:</string>
    <string name="gps_st_info_prn">prn:</string>
    <string name="gps_st_info_azimuth">Azimuth:</string>
    <string name="gps_st_info_elevation">Elevation:</string>
    <string name="alert_quit_ok">Are you sure exit?</string>
    <string name="proximitysenor_info">The data of proximit sensor is:</string>
    <string name="tp_proximitysenor_info">The test of TP proximit sensor:</string>
    <string name="tv_st_info">The data of GPS is:</string>
    <string name="test_motionsensor_info">The data of motionsensor is:</string>
    <string name="test_proximity_info">The data of the proximitysensor is:</string>
    <string name="test_lightsensor_info">The data of the lightsensor is:</string>
    <string name="cit_version_info">Version information</string>
    <string name="software_title">Software version</string>
    <string name="cit_info_default">Unknow</string>
    <string name="hardware_title">Hardware version</string>
    <string name="baseband_version">Baseband version</string>
    <string name="tv_st_success">Locating...</string>
    <string name="tv_st_located">Located</string>
    <string name="sn_version">sn code</string>
    <string name="meid_num">MEID:</string>
    <string name="imei_num">IMEI:</string>
    <string name="wifi_mac">MAC:</string>
    <string name="test_result">Test result：</string>
    <string name="result_pass">Pass</string>
    <string name="result_fail">Fail</string>
    <string name="bt_ft">BT/FT</string>
    <string name="result_not_tested">Not tested</string>
    <string name="audio_parameters">Audio parameters</string>
    <string name="test_calibration_title">Calibration</string>
    <string name="test_v_put_info">Please put you phone vertical and 45 angle in the dest,then click the Calibrtion button.</string>
    <string name="test_h_put_info">Please put you phone horizontal and 45 angle in the dest,then click the Calibrtion button.</string>
    <string name="str_calibration_success">Calibration success.</string>
    <string name="str_calibration_failed">Calibration failed.</string>
    <string name="test_magneticsensor_info">The data of magnetic sensor is:\n</string>
    <string name="test_temperature_title">Temperature</string>
    <string name="test_temperature_info">The phone of temperature is:</string>
    <string name="camera">Camera</string>
    <string name="vup">Volume Up</string>
     <string name="vdown">Volume Down</string>
     <string name="back">Back</string>
     <string name="home">Home</string>
     <string name="menu">Menu</string>
     <string name="search">Search</string>
     <string name="complete">complete</string>
     <string name="retest">Retest</string>
     <string name="exit">Exit</string>
     <string name="success">success</string>
     <string name="fail">fail</string>
     <string name="result_all_success">All passed!</string>
     <string name="result_fail_items">Fail items:</string>
     <string name="null_item"> </string>
     <string name="device_not_exist">Device is not exist!</string>
    <string name="sn_model">model</string>
    <string name="not_pass">Not pass</string>
    <string name="charge_current">charge current:</string>
    <string name="headset_plug_warning">Plz plug headset...</string>
    <string name="abnormal_value">abnormal</string>
    <string name="rebootTest">Begin reboot</string>
    <string name="Stoptest">Stop test</string>
    <string name="times">Times</string>
    <string name="time_interval">Time interval(s)</string>
    <string name="info">默认重启次数为5000次，默认重启间隔为180秒。需要修改这两项，请手动设置。按“停止重启”按钮后，自动重启结束，开机不会再弹出此界面。</string>
    <string name="info_title">说明:</string>
    <string name="headset">Headset</string>
    <string name="exit_test">Exit test</string>
    <string name="backlight_title">Screen brightness is :</string>
    <string name="begin_test">Begin test</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="flash_test_on">on</string>
    <string name="flash_test_off">off</string>
    <string name="button_light_test">Button light test</string>
    <string name="wifi_test">Wifi test</string>
    <string name="wifi_adjustment">Wifi adjustment</string>
    <string name="open_wifi">Open wifi</string>
    <string name="close_wifi">Close wifi</string>
    <string name="adjust_now">Wifi adjustming</string>
    <string name="adjustment_result_success">Wifi cal success</string>
    <string name="adjustment_result_fail">Wifi cal fail</string>
    <string name="adjustment_result">adjusting ...</string>
    <string name="bluetooth_test">Bluetooth test</string>
    <string name="bluetooth_dut">Bluetooth dut test</string>
    <string name="open_bluetooth">Open Bluetooth</string>
    <string name="close_bluetooth">Close Bluetooth</string>
    <string name="bluetooth_dut_now">Begin Bluetooth dut test</string>
    <string name="bluetooth_dut_success">Bluetooth dut success</string>
    <string name="bluetooth_dut_fail">Bluetooth dut fail</string>
    <string name="please_insert_uim_sim_card">Please insert the UIM / SIM card</string>
    <string name="tp_info">"TP Info"</string>
    <string name="tp_ver">"TP Version"</string>
    <string name="status_charging">Charging</string>
    <string name="status_low_power">Low power</string>
    <string name="status_unread">Unread</string>
    <string name="status_normal">Normal</string>
    <string name="key_bluetooth_text">Bluetooth</string>
    <string name="key_funs_text">Funs Key</string>
    <string name="key_left_down_text">Left Down</string>
      <string name="breath_pass">red green blue lights</string>
      <string name="inter_version">build number</string>
       <string name="speak_test">Please add a test in T kagan directory. The mp3 files</string>
     <string  name="test_fingerprint_prompt">please put your finger on fingerprint sensor to test</string>
    <string name="fm_search">Search</string>
    <string name="fm_click_search">Click Search</string>
</resources>