<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_alignParentTop="true" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <Button
	        android:id="@+id/status_charging"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/status_charging" />
        <Button
	        android:id="@+id/status_low_power"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/status_low_power" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:visibility="gone">
        <Button
	        android:id="@+id/status_unread"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/status_unread" />
        <Button
	        android:id="@+id/status_normal"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/status_normal" />
    </LinearLayout>
    
    <Button
	        android:id="@+id/test_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/flash_test_on" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
	        android:id="@+id/success_test"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/success" />
        <Button
	        android:id="@+id/fail_test"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/fail" />
    </LinearLayout>

    <TextView
        android:id="@+id/test_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/test_btn"
        android:layout_marginTop="37dp"
        android:text="@string/breath_pass"
        android:textSize="24.0dip" />

</RelativeLayout>