<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/cit_version_info">
        
        
             <Preference android:key="sn_model" 
               style="?android:preferenceInformationStyle"
               android:title="@string/sn_model"
               android:summary="@string/cit_info_default"/> 
		       <!-- Software infomation  -->
		       <Preference android:key="software_title" 
		               style="?android:preferenceInformationStyle"
		               android:title="@string/software_title"
		               android:summary="@string/cit_info_default"/>
		       
		       <!-- Hardware infomation  -->
<!--  		       <Preference android:key="hardware_title" 
		               style="?android:preferenceInformationStyle"
		               android:title="@string/hardware_title"
		               android:summary="@string/cit_info_default"/>  -->
		       <!-- Device firmware version -->
<!--  		       <Preference android:key="firmware_version" 
		               style="?android:preferenceInformationStyle"
		               android:title="@string/firmware_version"
		               android:summary="@string/device_info_default"/>  -->
		                <Preference android:key="inter_version" 
               style="?android:preferenceInformationStyle"
               android:title="@string/inter_version"
               android:summary="@string/cit_info_default"/>
		       <!-- Device Baseband version -->
		       <Preference android:key="baseband_version" 
		               style="?android:preferenceInformationStyle"
		               android:title="@string/baseband_version"
		               android:summary="@string/cit_info_default"/>  
		       
		       <!-- Device Kernel version -->
<!--		       <Preference android:key="kernel_version" 
		               style="?android:preferenceInformationStyle"
		               android:title="@string/kernel_version"
		               android:summary="@string/device_info_default"/>   -->
		
		       <!-- Detailed build version -->
<!--  	        <Preference android:key="build_number" 
		               style="?android:preferenceInformationStyle"
		               android:title="@string/build_number"
		               android:summary="@string/device_info_default"/>   -->
              <Preference android:key="sn_version" 
               style="?android:preferenceInformationStyle"
               android:title="@string/sn_version"
               android:summary="@string/cit_info_default"/>
              
              <Preference android:key="audio_parameters" 
               style="?android:preferenceInformationStyle"
               android:title="@string/audio_parameters"
               android:summary="@string/cit_info_default"/>
             
              <Preference android:key="tp_info" 
               style="?android:preferenceInformationStyle"
               android:title="@string/tp_info"
               android:summary="@string/cit_info_default"/>
              
              <Preference android:key="tp_ver" 
               style="?android:preferenceInformationStyle"
               android:title="@string/tp_ver"
               android:summary="@string/cit_info_default"/>
</PreferenceScreen>