<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
android:id="@+id/fmtest"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<LinearLayout android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical">
<TextView android:id="@+id/test_name" android:layout_marginTop="40dip" android:layout_width="fill_parent"
android:layout_height="wrap_content" android:textSize="30dip" android:text="@string/fmtestname" />

<TextView android:layout_marginTop="30dip" android:textSize="25dip" android:layout_width="fill_parent" android:id="@+id/txtStatus"
android:layout_height="wrap_content" android:text="@string/fm_click_search" />

<Button
	android:id="@+id/fm_search"
	android:textAppearance="?android:attr/textAppearanceMedium"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/fm_search"
	android:layout_weight="2">
</Button>

</LinearLayout>
<LinearLayout android:layout_width="fill_parent" 
android:layout_height="wrap_content" android:layout_gravity="bottom" >
    <Button android:layout_width="150dp" android:layout_marginLeft="10dip" android:id="@+id/btnSuc"
  android:layout_height="100dp" android:text="@string/success"  />
    <Button android:layout_width="150dp" android:id="@+id/btnFail" android:layout_marginLeft="2dip"
android:layout_height="100dp" android:text="@string/fail" />
</LinearLayout>
</FrameLayout>
