<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_item_flashlight"
        android:textSize="20dp" />

    <Button
        android:id="@+id/flash_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash_test_on" />
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
	        android:id="@+id/success_test"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/success" />
        <Button
	        android:id="@+id/fail_test"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/fail" />
    </LinearLayout>
</LinearLayout>