<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >

	    <Button
	        android:id="@+id/open_bluetooth"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/open_bluetooth" />
	
	    <Button
	        android:id="@+id/close_bluetooth"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/close_bluetooth" />
    </LinearLayout>

    <Button
        android:id="@+id/bluetooth_dut_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_marginBottom="30dip"
        android:text="@string/bluetooth_dut_now" />
    
    <TextView
        android:id="@+id/adjustment_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjustment_result"
        android:textSize="20dip"/>

</LinearLayout>