<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
	    <TextView
	        android:id="@+id/backlight_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/backlight_title"
	        android:textSize="20dip" />

	    <TextView
	        android:id="@+id/backlight_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20dip" />

    </LinearLayout>

    <Button
        android:id="@+id/begin_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_test" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
	        android:id="@+id/success_test"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/success" />
        <Button
	        android:id="@+id/fail_test"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="100dp"
	        android:text="@string/fail" />
    </LinearLayout>


</LinearLayout>