<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test_finger_print"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <TextView 
        android:layout_height="380dip"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:text="@string/test_fingerprint_prompt"/>
    
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >
        <Button
            android:id="@+id/success_test"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/success" />
        
        <Button
            android:id="@+id/fail_test"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/fail" />
    </LinearLayout>
</LinearLayout>
